--- a/gladiator.html
+++ b/gladiator.html
@@ -16,7 +16,7 @@
     <nav class="nav layout-box">
       <a href="/index.html"><img src="images/logo-1x.png" alt="Filmax, sitio web de películas online." class="logo"></a>
       <ul class="menu">
-        <li class="item"><a href="#body">home</a></li>
+        <li class="item"><a href="/index.html">home</a></li>
         <li class="item"><a href="#">features</a></li>
         <li class="item"><a href="#">about</a></li>
         <li class="item"><a href="#">news</a></li>
